# ChangeDisplayResolution

./: LICENSE  README.md  pyproject.toml
changedisplayresolution/: main.py
