[tool.poetry]
name = "changedisplayresolution"
version = "0.1.0"
description = ""
authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywin32 = "^310"
click = "^8.1.8"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
changeres = 'changedisplayresolution.main:cli'